file(COPY exit_default.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY exit_selected.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY jb_mono.ttf DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY party_default.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY party_selected.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY rules_default.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY rules_selected.png DESTINATION ${CMAKE_BINARY_DIR}/assets)

file(COPY drop_default.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY drop_selected.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY menu_default.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY menu_selected.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY skip_default.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY skip_selected.png DESTINATION ${CMAKE_BINARY_DIR}/assets)

file(COPY back.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY deck.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY dropButton.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY tip.png DESTINATION ${CMAKE_BINARY_DIR}/assets)
file(COPY unselectedblankCard.png DESTINATION ${CMAKE_BINARY_DIR}/assets)

add_subdirectory(tiles)
add_subdirectory(cards)
